fix(TextArea): padding aligned

--- a/src/components/TextArea/_text-area.scss
+++ b/src/components/TextArea/_text-area.scss
@@ -19,7 +19,7 @@
     @include typescale('zeta');
     width: 100%;
     min-width: 10rem;
-    padding: $spacing-md;
+    padding: $spacing-xs;
     color: $text-01;
     background-color: $field-01;
     appearance: none;
